# cmake-swiftui-example

./: CMakeLists.txt  README.md
src/: FoobarApp.swift
